More traivs debug

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,11 @@ script:
   # selenium
   - docker network create cphb-network
   - docker run --rm -v ${TRAVIS_BUILD_DIR}:/app -w /app --network cphb-network -d --name assignment10-app cphb/assignment10-app 
-  - docker run --rm -v ${TRAVIS_BUILD_DIR}:/app -w /app --network cphb-network --env "APP_URL=http://app.test:8080" --link "assignment10-app:app.test" --name assignment10-selenium cphb/assignment10-selenium
+  - docker run --rm -v ${TRAVIS_BUILD_DIR}:/app -w /app --network cphb-network -d --name assignment10-selenium --env "APP_URL=http://app.test:8080" --link "assignment10-app:app.test" --name assignment10-selenium cphb/assignment10-selenium
+  - docker exec ping -c 3 app.test
+  - docker nc -w 1 -q 1 app.test 8080
   - docker container ls
   - docker container inspect assignment10-app
+  - docker container inspect assignment10-selenium
   - docker network inspect cphb-network
+  - docker attach assignment10-selenium
