--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ install: true
 
 script:
   - echo $TRAVIS_BUILD_DIR
-  #- docker run --rm -v ${TRAVIS_BUILD_DIR}:/app -w /app cphb/assignment10-app mvn test
   # unit 
   - docker run --rm -v ${TRAVIS_BUILD_DIR}:/app -w /app cphb/assignment10-app mvn -Dtest=cphb.AccountTest,cphb.CreditCardTest test
   # integration
@@ -22,9 +21,9 @@ script:
   - docker run --rm -v ${TRAVIS_BUILD_DIR}:/app -w /app --network cphb-network -d --name assignment10-app cphb/assignment10-app 
   - docker run --rm -v ${TRAVIS_BUILD_DIR}:/app -w /app --network cphb-network -d --name assignment10-selenium --env "APP_URL=http://app.test:8080" --link "assignment10-app:app.test" --name assignment10-selenium cphb/assignment10-selenium
   - docker exec assignment10-selenium ping -c 3 app.test
-  - docker esec assignment10-selenium nc -w 1 -q 1 app.test 8080
+  - docker exec assignment10-selenium nc -w 1 -q 1 app.test 8080
+  - docker exec assignment10-selenium dig http://app.test:8080
+  - docker exec wget http://app.test:8080
   - docker container ls
-  - docker container inspect assignment10-app
-  - docker container inspect assignment10-selenium
   - docker network inspect cphb-network
   - docker attach assignment10-selenium
